[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "callrail-mcp"
version = "0.5.1"
description = "Model Context Protocol (MCP) server for the CallRail REST API v3"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Steve Japalucci", email = "s@pghdma.com" },
]
maintainers = [
    { name = "Steve Japalucci", email = "s@pghdma.com" },
]
keywords = ["mcp", "model-context-protocol", "callrail", "claude", "anthropic", "call-tracking"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Communications :: Telephony",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.2.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-mock>=3.12",
    "responses>=0.25",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-requests",
    "hypothesis>=6.100",
]

[project.scripts]
callrail-mcp = "callrail_mcp.server:main"

[project.urls]
Homepage = "https://github.com/pghdma/callrail-mcp"
Repository = "https://github.com/pghdma/callrail-mcp"
Issues = "https://github.com/pghdma/callrail-mcp/issues"
Documentation = "https://github.com/pghdma/callrail-mcp#readme"
Changelog = "https://github.com/pghdma/callrail-mcp/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/callrail_mcp"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_configs = true
